fixing toolbar border and alignment

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -156,7 +156,10 @@ p {font-weight: 300;}
     margin-bottom: 0;
 
     .navbar-inner {
-    //     border-bottom: 4px double @color_two;
+        border-bottom: 4px double @color_two;
+        box-shadow: none;
+        padding-left: 0;
+        padding-right: 0;
 
         .btn {
             &.btn-navbar {
@@ -176,10 +179,6 @@ p {font-weight: 300;}
                 }
             }
         }
-        box-shadow: none;
-        padding-left: 0;
-        padding-right: 0;
-        border: none;
 
         .nav, &.nav {
             li {
@@ -261,10 +260,8 @@ p {font-weight: 300;}
     }
 
     &.navbar-inverse {
-        ul {
-            &.navbar-inner {
-                border-bottom: none;
-            }
+        .navbar-inner {
+            border-bottom: 0 none;
         }
         .navbar-inner {
             .btn {
@@ -1971,8 +1968,13 @@ div {
     z-index: 1031;
 
     .icon-angle-down , .icon-angle-up {
-        color: @color_two;
         font-size: 30px;
+    }
+    .icon-angle-down {
+        color: @color_two;
+    }
+    .icon-angle-up {
+        color: @white;
     }
 }
 
@@ -1998,22 +2000,29 @@ div {
 }
 
 .wrappToolbar{
+    border-bottom: 4px double transparent;
+
     &.collapsedToolbarEnable {
         .navbar-inner{
             background-color: transparent;
             background-image: none;
+            border-bottom: 0 none;
+
             .clementine-toolbar-container {
                 background-color: @navbarBackground;
             }
         }
     }
     &.collapsedToolbar{
+        border-bottom-color: @color_two;
+
         .navbar-inner{
             .collapsedToolbarInner {
                 height: 0;
                 overflow: hidden;
             }
         }
+
     }
 }
 
